tests/fixtures/functional_patterns/positive/p17_product.rs
fn calculate_product(items: Vec<i32>) -> i32 {
    items.iter().product()
}
