tests/fixtures/functional_patterns/negative/n45_box_deref.rs
fn unbox(b: Box<i32>) -> i32 {
    *b
}
